[tool.poetry]
name = "fastapi_intro"
version = "0.1.0"
description = ""
authors = ["prabal <prabal01pathak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.76.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = {extras = ["email"], version = "^1.9.0"}
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
